Do a production build.

--- a/src/html/layouts/main.html
+++ b/src/html/layouts/main.html
@@ -407,7 +407,7 @@
             <div class="muf-hero relative flex">
                 <div class="muf-hero-underlay">
                     <block name="hero">
-                        <img src="/docs/assets/images/hero.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
+                        <img src="images/hero.jpg" alt="Marshall Hero Image" class="object-cover h-full w-screen" />
                     </block>
                     <div class="muf-hero-shade">
                         &nbsp;
