--- a/src/html/partials/events.html
+++ b/src/html/partials/events.html
@@ -1,4 +1,4 @@
-<div class="muf-background-bleed flex items-stretch" style="background-image: url('/docs/assets/images/hero.jpg')">
+<div class="muf-background-bleed flex items-stretch" style="background-image: url('images/hero.jpg')">
 	<div class="bg-charcoal/90 w-full text-white pt-24 md:pt-28 pb-20">
 		<div class="container">
 			<h2 class="deco-rule deco-rule--white text-center md:text-left">
@@ -16,7 +16,7 @@
 				<div class="muf-carousel-item">
 					<a href="#" class="muf-link-reset">
 						<div class="relative muf-event-image-wrapper">
-							<img src="/docs/assets/images/event01.jpg" alt="Event Image" class="object-cover w-full h-full">
+							<img src="images/event01.jpg" alt="Event Image" class="object-cover w-full h-full">
 							<div class="absolute top-4 left-4 text-white muf-text-shadow z-20">
 								<div class="text-sm uppercase">May</div>
 								<div class="text-4xl -mt-2">16</div>
@@ -31,7 +31,7 @@
 				<div class="muf-carousel-item">
 					<a href="#" class="muf-link-reset">
 						<div class="relative muf-event-image-wrapper">
-							<img src="/docs/assets/images/event02.jpg" alt="Event Image" class="object-cover w-full h-full">
+							<img src="images/event02.jpg" alt="Event Image" class="object-cover w-full h-full">
 							<div class="absolute top-4 left-4 text-white muf-text-shadow z-20">
 								<div class="text-sm uppercase">May</div>
 								<div class="text-4xl -mt-2">16</div>
@@ -46,7 +46,7 @@
 				<div class="muf-carousel-item">
 					<a href="#" class="muf-link-reset">
 						<div class="relative muf-event-image-wrapper">
-							<img src="/docs/assets/images/event03.jpg" alt="Event Image" class="object-cover w-full h-full">
+							<img src="images/event03.jpg" alt="Event Image" class="object-cover w-full h-full">
 							<div class="absolute top-4 left-4 text-white muf-text-shadow z-20">
 								<div class="text-sm uppercase">May</div>
 								<div class="text-4xl -mt-2">16</div>
@@ -61,7 +61,7 @@
 				<div class="muf-carousel-item">
 					<a href="#" class="muf-link-reset">
 						<div class="relative muf-event-image-wrapper">
-							<img src="/docs/assets/images/event04.jpg" alt="Event Image" class="object-cover w-full h-full">
+							<img src="images/event04.jpg" alt="Event Image" class="object-cover w-full h-full">
 							<div class="absolute top-4 left-4 text-white muf-text-shadow z-20">
 								<div class="text-sm uppercase">May</div>
 								<div class="text-4xl -mt-2">16</div>
@@ -76,7 +76,7 @@
 				<div class="muf-carousel-item">
 					<a href="#" class="muf-link-reset">
 						<div class="relative muf-event-image-wrapper">
-							<img src="/docs/assets/images/event03.jpg" alt="Event Image" class="object-cover w-full h-full">
+							<img src="images/event03.jpg" alt="Event Image" class="object-cover w-full h-full">
 							<div class="absolute top-4 left-4 text-white muf-text-shadow z-20">
 								<div class="text-sm uppercase">May</div>
 								<div class="text-4xl -mt-2">16</div>
