--- a/src/html/partials/video.html
+++ b/src/html/partials/video.html
@@ -1,7 +1,7 @@
 <div class="muf-video-wrapper">
 	<div class="alasu-video-poster-wrapper">
 		<!-- Put the image for the video here -->
-		<img src="/docs/assets/images/video_bg.jpg" alt="Video Poster Image" />
+		<img src="images/video_bg.jpg" alt="Video Poster Image" />
 	</div>
 	<div class="muf-video-container hidden">
 		<!-- Embed the video from service here -->
