Clean up file references

--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -11,7 +11,7 @@
 			background: linear-gradient(0deg, rgba(0, 0, 0, 0.6) 40.71%, rgba(0, 0, 0, 0) 63.75%);
 
 			@screen md {
-				background: linear-gradient(90deg, rgba(0, 0, 0, 0.6) 39.93%, rgba(0, 0, 0, 0) 63.33%), url(4778.jpg);
+				background: linear-gradient(90deg, rgba(0, 0, 0, 0.6) 39.93%, rgba(0, 0, 0, 0) 63.33%);
 			}
 
 			h1.deco-rule {
