--- a/src/html/partials/events.html
+++ b/src/html/partials/events.html
@@ -1,7 +1,7 @@
 <div class="muf-background-bleed flex items-stretch" style="background-image: url('assets/images/hero.jpg')">
 	<div class="bg-charcoal/90 w-full text-white pt-24 md:pt-28 pb-20">
 		<div class="container">
-			<h2 class="deco-rule deco-rule--white text-center md:text-left">
+			<h2 class="deco-rule deco-rule--white muf-text-center md:text-left">
 				Featured Events
 			</h2>
 			<div 
