--- a/src/html/layouts/main.html
+++ b/src/html/layouts/main.html
@@ -136,7 +136,7 @@
                 </div>
             </div>
 
-            <div class="muf-navigation-wrapper">
+            <div class="muf-navigation-wrapper" id="muf-navigation">
                 <div class="container">
                     <div class="flex gap-8 flex-col">
                         <div class="muf-search mt-8">
@@ -278,8 +278,8 @@
                                     <button 
                                         class="muf-primary-nav-label muf-accordion-button" 
                                         aria-expanded="false"
-                                        aria-controls="primaryNavPanel02"
-                                        id="primaryNav02"
+                                        aria-controls="primaryNavPanel03"
+                                        id="primaryNav03"
                                     >
                                         Get Involved
                                         <span class="">
@@ -288,7 +288,7 @@
                                             </svg>
                                         </span>
                                     </button>
-                                    <div class="muf-primary-nav-list-wrapper" aria-labelledby="primaryNav02" id="primaryNavPanel02">
+                                    <div class="muf-primary-nav-list-wrapper" aria-labelledby="primaryNav03" id="primaryNavPanel03">
                                         
                                         <ul class="muf-list-reset muf-primary-nav-list">
                                             <li class="break-inside-avoid">
@@ -336,8 +336,8 @@
                                     <button 
                                         class="muf-primary-nav-label muf-accordion-button" 
                                         aria-expanded="false"
-                                        aria-controls="primaryNavPanel02"
-                                        id="primaryNav02"
+                                        aria-controls="primaryNavPanel04"
+                                        id="primaryNav04"
                                     >
                                         Give Back
                                         <span class="">
@@ -346,7 +346,7 @@
                                             </svg>
                                         </span>
                                     </button>
-                                    <div class="muf-primary-nav-list-wrapper" aria-labelledby="primaryNav02" id="primaryNavPanel02">
+                                    <div class="muf-primary-nav-list-wrapper" aria-labelledby="primaryNav04" id="primaryNavPanel04">
                                         
                                         <ul class="muf-list-reset muf-primary-nav-list">
                                             <li>
@@ -516,14 +516,14 @@
                 <div class="grid gap-12 md:grid-cols-4 text-sm leading-5">
                     <div>
                         <a href="/" class="muf-footer-logo">
-                            <img src="images/footer_logo@2x.png" src="Marshall University Foundation, Inc. logo mark" class="" />
+                            <img src="images/footer_logo@2x.png" alt="Marshall University Foundation, Inc. logo mark" class="" />
                         </a>
                         <div class="font-bold">Marshall University Foundation, Inc.</div>
                         <div>
                             519 John Marshall Dr. <br />
                             Huntington, WV 25703 <br />
                             304-696-6264 <br />
-                            <a href="mailto:foundation@marshall.edu" class="muf-link-reset text-green hover:text-white hover:underline hover:duration-300">foundation@marshall.edu</a>
+                            <a href="mailto:foundation@marshall.edu" class="muf-link-reset text-green-over-dark hover:text-white hover:underline hover:duration-300">foundation@marshall.edu</a>
                         </div>
                     </div>
 
