--- a/src/html/partials/news.html
+++ b/src/html/partials/news.html
@@ -1,7 +1,7 @@
 <div class="muf-background-bleed flex items-stretch" style="background-image: url('images/hero.jpg');">
 	<div class="bg-green/90 w-full h-min text-white pt-24 md:pt-28 pb-20">
 		<div class="container">
-			<h2 class="deco-rule deco-rule--white text-center md:text-left">
+			<h2 class="deco-rule deco-rule--white muf-text-center md:text-left">
 				Latest News
 			</h2>
 			<div class="">
