--- a/src/html/partials/universal_content.html
+++ b/src/html/partials/universal_content.html
@@ -2,11 +2,21 @@
 	<div class="muf-main-grid grid md:grid-cols-12 gap-6 md:gap-12">
 
 		<div class="md:col-span-4 lg:col-span-3 md:order-2">
-			<div class="muf-section-nav bg-green-light p-6 py-12">
-				<div class="deco-rule italic text-gray-700">
-					In this section
+			<div class="muf-section-nav bg-green-light p-6 py-10">
+				<div class="deco-rule italic text-gray-700 muf-section-nav-trigger" id="muf-section-nav-trigger" aria-controls="muf-section-nav-links" aria-expanded="false">
+					<div class="flex items-center justify-between">
+						<span>
+							In this section
+						</span>
+						<span class="ml-2 muf-section-nav-icon">
+			                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+			                    <path d="M2.74414 3.92253L3.92253 2.74414L10 8.82162L16.0775 2.74414L17.2559 3.92253L3.92253 17.2559L2.74414 16.0775L8.82162 10L2.74414 3.92253Z" class="fill-current" />
+			                    <path d="M16.0775 17.2559L10.8333 12.0117L12.0117 10.8333L17.2559 16.0775L16.0775 17.2559Z" class="fill-current" />
+			                </svg>
+			            </span>
+			        </div>
 				</div>
-				<div>
+				<div id="muf-section-nav-links" aria-labelledby="muf-section-nav-trigger">
 					<ul class="muf-list-reset">
 						<li>
 							<a href="#" class="muf-link-reset">
