--- a/src/html/partials/video.html
+++ b/src/html/partials/video.html
@@ -1,10 +1,10 @@
 <div class="muf-video-wrapper">
-	<div class="alasu-video-poster-wrapper">
+	<div class="muf-video-poster-wrapper">
 		<!-- Put the image for the video here -->
 		<img src="images/video_bg.jpg" alt="Video Poster Image" />
 	</div>
 	<div class="muf-video-container hidden">
 		<!-- Embed the video from service here -->
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/zslvPW7U9SU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/yhNTJ8RENWg" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 </div>
