--- a/src/scss/containers.scss
+++ b/src/scss/containers.scss
@@ -14,6 +14,34 @@
         max-width: calc(100vw - 2rem);
         scrollbar-width: none; /* Firefox */
         -ms-overflow-style: none;  /* Internet Explorer 10+ */
+
+        @screen sm {
+            max-width: calc(600px - 2rem);
+        }
+
+        @screen smed {
+            max-width: calc(700px - 2rem);
+        }
+
+        @screen md {
+            max-width: calc(820px - 2rem);
+        }
+
+        @screen mlg {
+            max-width: calc(975px - 2rem);
+        }
+
+        @screen lg {
+            max-width: calc(1230px - 2rem);
+        }
+
+        @screen xl {
+            max-width: calc(1300px - 2rem);
+        }
+
+        @screen 2xl {
+            max-width: calc(1536px - 2rem);
+        }
     }
 }
 
