--- a/docs/assets/css/app.css
+++ b/docs/assets/css/app.css
@@ -8110,6 +8110,7 @@ select {
   padding-left: 1rem;
 }
 .muf-event-section-head h3 {
+  margin-left: 0.5rem;
   font-size: 20px;
   line-height: 26px;
 }
