Most of Dave’s fixes.

--- a/src/html/partials/events.html
+++ b/src/html/partials/events.html
@@ -25,7 +25,7 @@
 								&nbsp;
 							</div>
 						</div>
-						<div class="deco-rule md:text-lg mt-4">Homecoming</div>
+						<div class="deco-rule deco-rule-small md:text-lg mt-4">Homecoming</div>
 					</a>
 				</div>
 				<div class="muf-carousel-item">
@@ -40,7 +40,7 @@
 								&nbsp;
 							</div>
 						</div>
-						<div class="deco-rule md:text-lg mt-4">Homecoming</div>
+						<div class="deco-rule deco-rule-small md:text-lg mt-4">Homecoming</div>
 					</a>
 				</div>
 				<div class="muf-carousel-item">
@@ -55,7 +55,7 @@
 								&nbsp;
 							</div>
 						</div>
-						<div class="deco-rule md:text-lg mt-4">Memorial Student Center Fountain Day</div>
+						<div class="deco-rule deco-rule-small md:text-lg mt-4">Memorial Student Center Fountain Day</div>
 					</a>
 				</div>
 				<div class="muf-carousel-item">
@@ -70,7 +70,7 @@
 								&nbsp;
 							</div>
 						</div>
-						<div class="deco-rule md:text-lg mt-4">Homecoming</div>
+						<div class="deco-rule deco-rule-small md:text-lg mt-4">Homecoming</div>
 					</a>
 				</div>
 				<div class="muf-carousel-item">
@@ -85,11 +85,11 @@
 								&nbsp;
 							</div>
 						</div>
-						<div class="deco-rule md:text-lg mt-4">Memorial Student Center Fountain Day</div>
+						<div class="deco-rule deco-rule-small md:text-lg mt-4">Memorial Student Center Fountain Day</div>
 					</a>
 				</div>
 			</div>
-			<a href="#" class="muf-link-reset muf-button">
+			<a href="#" class="muf-link-reset muf-button mt-8 md:mt-12">
 				View all events
 			</a>
 		</div>
