--- a/src/html/partials/feature.html
+++ b/src/html/partials/feature.html
@@ -8,7 +8,7 @@
 	</div>
 	<div class="muf-feature-box">
 		<div class="muf-feature-box-content">
-			<h3 class="muf-feature-headline">{{ subtitle }} </h3>
+			<h3 class="muf-feature-headline text-lg">{{ subtitle }} </h3>
 			<p>Pellentesque posuere. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Nulla neque dolor, sagittis eget, iaculis quis, molestie non, velit. Curabitur suscipit suscipit tellus. Praesent ac massa at ligula laoreet iaculis.</p>
 
 			<p>Nullam accumsan lorem in dui. In turpis. Etiam imperdiet imperdiet orci. Quisque id odio. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis.</p>
@@ -18,7 +18,7 @@
 	            <a href="#" class="muf-link-reset muf-button w-fit">
 	                First CTA
 	            </a>
-	            <a href="#" class="muf-link-reset muf-button muf-button--white w-fit muf-border-green">
+	            <a href="#" class="muf-link-reset muf-button muf-button--transparent w-fit muf-border-green">
 	                Optional Second CTA
 	            </a>
 	        </div>
