--- a/src/html/partials/news.html
+++ b/src/html/partials/news.html
@@ -1,4 +1,4 @@
-<div class="muf-background-bleed flex items-stretch" style="background-image: url('images/hero.jpg');">
+<div class="muf-background-bleed flex items-stretch" style="background-image: url('assets/images/hero.jpg');">
 	<div class="bg-green/90 w-full h-min text-white pt-24 md:pt-28 pb-20">
 		<div class="container">
 			<h2 class="deco-rule deco-rule--white muf-text-center md:text-left">
@@ -7,52 +7,58 @@
 			<div class="">
 				<div class="muf-carousel muf-news-wrapper">
 					<div class="muf-carousel-item">
-						<div class="flex">
-							<div class="opacity-50 pr-4 mr-4 muf-dashed-border-r-darker">
-								<div class="text-xs font-sans">May</div>
-								<div class="text-2xl">16</div>
+						<a href="#" class="muf-link-reset text-white">
+							<div class="flex">
+								<div class="opacity-50 pr-4 mr-4 muf-dashed-border-r-darker muf-news-date">
+									<div class="text-xs font-sans">May</div>
+									<div class="text-2xl">16</div>
+								</div>
+								<div class="flex-grow muf-news-headline">
+									Alumni Association announces Chapter of the Year, Emerging Chapter of the Year
+								</div>
 							</div>
-							<div class="flex-grow">
-								<a href="#" class="muf-link-reset text-white hover:underline">Alumni Association announces Chapter of the Year, Emerging Chapter of the Year</a>
+						</a>
+					</div>
+					<div class="muf-carousel-item">
+						<a href="#" class="muf-link-reset text-white">
+							<div class="flex">
+								<div class="opacity-50 pr-4 mr-4 muf-dashed-border-r-darker muf-news-date">
+									<div class="text-xs font-sans">May</div>
+									<div class="text-2xl">23</div>
+								</div>
+								<div class="flex-grow muf-news-headline">
+									Gary and Jo Ann White establish Professorship to honor 37th Marshall University president
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 					<div class="muf-carousel-item">
 						<div class="flex">
-							<div class="opacity-50 pr-4 mr-4 muf-dashed-border-r-darker">
-								<div class="text-xs font-sans">May</div>
-								<div class="text-2xl">23</div>
-							</div>
-							<div class="flex-grow">
-								<a href="#" class="muf-link-reset text-white hover:underline">Gary and Jo Ann White establish Professorship to honor 37th Marshall University president</a>
-							</div>
-						</div>
-					</div>
-					<div class="muf-carousel-item">
-						<div class="flex">
-							<div class="opacity-50 pr-4 mr-4 muf-dashed-border-r-darker">
+							<div class="opacity-50 pr-4 mr-4 muf-dashed-border-r-darker muf-news-date">
 								<div class="text-xs font-sans">May</div>
 								<div class="text-2xl">12</div>
 							</div>
-							<div class="flex-grow">
-								<a href="#" class="muf-link-reset text-white hover:underline">OVP HEALTH gifts $100,000 in support of Brad D. Smith Center for Business &amp; Innovation</a>
+							<div class="flex-grow muf-news-headline">
+								OVP HEALTH gifts $100,000 in support of Brad D. Smith Center for Business &amp; Innovation
 							</div>
 						</div>
 					</div>
 					<div class="muf-carousel-item">
-						<div class="flex">
-							<div class="opacity-50 pr-4 mr-4 muf-dashed-border-r-darker">
-								<div class="text-xs font-sans">May</div>
-								<div class="text-2xl">09</div>
+						<a href="#" class="muf-link-reset text-white">
+							<div class="flex">
+								<div class="opacity-50 pr-4 mr-4 muf-dashed-border-r-darker muf-news-date">
+									<div class="text-xs font-sans">May</div>
+									<div class="text-2xl">09</div>
+								</div>
+								<div class="flex-grow muf-news-headline">
+									OVP HEALTH gifts $100,000 in support of Brad D. Smith Center for Business &amp; Innovation
+								</div>
 							</div>
-							<div class="flex-grow">
-								<a href="#" class="muf-link-reset text-white hover:underline">OVP HEALTH gifts $100,000 in support of Brad D. Smith Center for Business &amp; Innovation</a>
-							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 			</div>
-			<div class="text-center md:text-left">
+			<div class="text-center md:text-left mt-8 md:mt-12">
 				<a href="#" class="muf-link-reset muf-button muf-button--white">
 					View all news
 				</a>
