--- a/src/html/partials/universal_content.html
+++ b/src/html/partials/universal_content.html
@@ -1,11 +1,11 @@
 <div class="container">
-	<div class="muf-main-grid grid md:grid-cols-12 gap-6 md:gap-12">
+	<div class="muf-main-grid grid md:grid-cols-12 gap-24 md:gap-12">
 
 		<div class="md:col-span-4 lg:col-span-3 md:order-2">
 			<div class="muf-section-nav bg-green-light p-6 py-10">
 				<div class="deco-rule italic text-gray-700 muf-section-nav-trigger" id="muf-section-nav-trigger" aria-controls="muf-section-nav-links" aria-expanded="false">
 					<div class="flex items-center justify-between">
-						<span>
+						<span class="text-smed text-gray-700">
 							In this section
 						</span>
 						<span class="ml-2 muf-section-nav-icon">
@@ -79,7 +79,7 @@
 		<div class="md:col-span-4 md:order-3 lg:col-span-3 space-y-12">
 			<div>
 				<div class="bg-charcoal text-white px-6 py-8">
-					<h3 class="text-white">Are you able to help Marshall rise?</h3>
+					<h3 class="text-white mb-2">Are you able to help Marshall rise?</h3>
 					<div class="text-gray-300 mb-6">Any gift of any size will help Marshall University to rise to a level of eminence in the state and across the U.S.</div>
 					<a href="#" class="muf-link-reset muf-button w-full">
 						Make a Gift
@@ -87,7 +87,7 @@
 				</div>
 			</div>
 			<div class="bg-green-light p-6 py-12">
-				<div class="deco-rule italic text-gray-700">
+				<div class="deco-rule italic text-gray-700 text-smed">
 					Contact Us
 				</div>
 				<div class="text-sm font-sans">
