--- a/src/scss/carousel.scss
+++ b/src/scss/carousel.scss
@@ -4,11 +4,11 @@
 	&.muf-stats-wrapper {
 
 		.muf-carousel-item {
-			@apply mr-12 pl-12 smed:mr-16 smed:pl-16 md:mr-24 md:pl-24;
-			min-width: min-content;
-			max-width: 63%;
+			@apply mr-12 pl-6 smed:mr-16 smed:pl-16 md:mr-24 md:pl-24;
+			width: 60vw;
 
 			@screen smed {
+				min-width: min-content;
 				max-width: 66%;
 			}
 
@@ -39,6 +39,27 @@
 			&:last-of-type {
 				@apply mr-0;
 			}
+
+			.muf-news-date {
+				@include muf-transition();
+			}
+
+			.muf-news-headline {
+				@include muf-transition();
+				@apply text-lg;
+			}
+
+			&:hover {
+
+				.muf-news-date {
+					@apply opacity-100;
+					border-color: rgba(19, 23, 22, 0.55);
+				}
+
+				.muf-news-headline {
+					@apply underline;
+				}
+			}
 		}
 	}
 
@@ -63,6 +84,14 @@
 				.muf-hover-overlay {
 					@apply opacity-100;
 				}
+
+				.deco-rule {
+					@apply underline;
+
+					&:after {
+						border-color: #009435;
+					}
+				}
 			}
 
 			&:last-of-type {
@@ -79,9 +108,9 @@
 		@apply text-center;
 
 		.muf-carousel-item {
-			width: 70vw;
-			max-width: 400px;
-			@apply mr-8;
+			width: 80vw;
+			max-width: 600px;
+			@apply mr-4;
 			min-height: 225px;
 		}
 	}
@@ -92,7 +121,7 @@
 }
 
 .flickity-prev-next-button {
-	@apply relative bg-gray-100 p-4;
+	@apply relative bg-gray-100 p-5;
 	height: 20px;
 	width: 20px;
 	background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10 4.92969L2.92969 12L10 19.0703L11.5 17.5703L6.92969 13H21V11H6.92969L11.5 6.42969L10 4.92969Z' fill='%23131716'/%3E%3C/svg%3E%0A");
@@ -118,7 +147,7 @@
 
 	&.previous {
 		left: 0;
-		margin-right: 0.5rem;
+		margin-right: 0.75rem;
 
 		&:hover {
 			@apply bg-gray-200;
