--- a/src/html/partials/news_teaser.html
+++ b/src/html/partials/news_teaser.html
@@ -1,14 +1,14 @@
 <div class="grid gap-6 smed:gap-12 smed:grid-cols-10">
 	<div class="smed:col-span-4">
-		<a href="#">
-			<img src="{{ image }}" alt="News Article Story" class="object-cover w-full" />
+		<a href="#" class="">
+			<img src="{{ image }}" alt="News Article Story" class="object-cover w-full muf-hover-border" />
 		</a>
 	</div>
 
 	<div class="smed:col-span-6">
-		<div class="text-xs font-sans deco-rule deco-rule-small">June 6, 2022</div>
+		<div class="text-xs font-sans deco-rule deco-rule-med">June 6, 2022</div>
 		<div class="mb-4">
-			<a href="#" class="muf-link-reset hover:text-green duration-300 font-bold like-h3">{{ title }}</a>
+			<a href="#" class="muf-link-reset hover:text-green duration-300 font-bold like-h2 md:like-h3">{{ title }}</a>
 		</div>
 		<p>Pellentesque posuere. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Nulla neque dolor, sagittis eget, iaculis quis, molestie non, velit. Curabitur suscipit suscipit tellus. Praesent ac massa at ligula laoreet iaculis.</p>
 	</div>
