--- a/src/scss/accordions.scss
+++ b/src/scss/accordions.scss
@@ -1,6 +1,5 @@
   
 .muf-accordions {
-	@apply px-4; 
 	counter-reset: steps;
 
 	.muf-accordion-button {
@@ -53,5 +52,10 @@
 }
 
 .muf-accordion-item {
-	@apply overflow-hidden py-6 border-gray-200 border-b;  
+	@apply overflow-hidden py-6 px-4 border-gray-200 border-b;
+	@include muf-transition();
+
+	&:hover {
+		@apply bg-gray-200;
+	}
 }
