--- a/src/scss/carousel.scss
+++ b/src/scss/carousel.scss
@@ -114,6 +114,18 @@
 			min-height: 225px;
 		}
 	}
+
+	&.muf-feature-carousel {
+
+		.flickity-prev-next-button {
+			left: calc(50% - 60px);
+
+			@screen md {
+				top: -5rem;
+				left: 5rem;
+			}
+		}
+	}
 }
 
 .flickity-viewport {
